ユーザー機能実装

--- a/app/views/scores/_main.html.erb
+++ b/app/views/scores/_main.html.erb
@@ -1,4 +1,14 @@
 <div class="score-header">
+  <div class="left-header">
+    <div class="header-title">
+      hogefuga
+    </div>
+  </div>
+  <div class="right-header">
+    <div class="header-button">
+      <a href="#">ログアウト</a>
+    </div>
+  </div>
 </div>
 
 <div class="scores">
