--- a/app/assets/stylesheets/scores.css
+++ b/app/assets/stylesheets/scores.css
@@ -37,8 +37,7 @@
 
 .score-header {
   height: 100px;
-  padding: 0 40px;
- 
+  padding: 30px 40px;
 }
 .scores {
   background-color: #FAFAFA;
@@ -46,7 +45,6 @@
   padding: 46px 40px 0;
 }
 .form {
-  background-color: #DDDDDD;
   height: 90px;
   padding: 20px 40px;
 }
